[package]
name = "ice-rs"
version = "0.3.0"
authors = ["cemoktra <b.schubert82@gmail.com>"]
edition = "2018"
description = "ZeroC Ice for Rust"
readme = "README.md"
homepage = "https://github.com/cemoktra/ice-rs"
repository = "https://github.com/cemoktra/ice-rs"
license = "GPL-2.0"
keywords = ["zeroc", "ice", "rpc"]

[profile.idea]
inherits = "dev"
opt-level = 0
debug = 2
split-debuginfo = "unpacked"
strip = "none"
debug-assertions = true
overflow-checks = false
incremental = true
codegen-units = 256
lto = "off"

[lib]
name = "ice_rs"
path = "src/lib.rs"

[[bin]]
name = "slice2rs"
path = "src/slice2rs/bin.rs"

[dependencies]
regex = "1"
ice-derive = "0.1"
Inflector = "0.11.4"
pest = "2.7.3"
memchr = "2.7.4"
pest_derive = "2.7.13"
clap = "3.0.0-beta.2"
num_enum = "0.5"
openssl = "0.10"
quote = "1.0"
tokio = { version = "1.1.0", features = ["full"] }
tokio-openssl = "0.6"
async-trait = "0.1"
futures = "0.3"
lazy_static = "1.4.0"